<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_subject"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/subject_placeholder"
        app:layout_constraintBottom_toBottomOf="@id/radio_grades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/radio_grades" />

    <RadioGroup
        android:id="@+id/radio_grades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/text_subject"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_grade_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="2"
            android:text="@string/grade_2" />

        <RadioButton
            android:id="@+id/radio_grade_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="3"
            android:text="@string/grade_3" />

        <RadioButton
            android:id="@+id/radio_grade_3.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="3.5"
            android:text="@string/grade_3.5" />

        <RadioButton
            android:id="@+id/radio_grade_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="4"
            android:text="@string/grade_4" />

        <RadioButton
            android:id="@+id/radio_grade_4.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="4.5"
            android:text="@string/grade_4.5" />

        <RadioButton
            android:id="@+id/radio_grade_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="5"
            android:text="@string/grade_5" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>